feat: add hibernate.default_schema to hibernate.properties

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,6 +3,7 @@ db.username=postgres
 db.password=postgres
 db.driver_class=org.postgresql.Driver
 
+hibernate.default_schema=main
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
