--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring.version>6.2.8</spring.version>
+        <spring.version>6.2.10</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -147,6 +147,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.19.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.27.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
