--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,3 +7,6 @@ hibernate.default_schema=PUBLIC
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+
+session.timeout=3
+session.cleanup.period=1
