refactor(config): replace hardcoded properties with environment variables

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 db.url=jdbc:postgresql://localhost:5432/weather_db
-db.username=postgres
-db.password=postgres
+db.username=${DATABASE_USERNAME}
+db.password=${DATABASE_PASSWORD}
 db.driver_class=org.postgresql.Driver
 
 hibernate.default_schema=main
